--- a/ScraperTest_2.csproj
+++ b/ScraperTest_2.csproj
@@ -9,7 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.17.1" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
+    <PackageReference Include="HtmlAgilityPack.CssSelectors.NetCore" Version="1.2.1" />
+    <PackageReference Include="IronWebScraper" Version="2021.11.0" />
     <PackageReference Include="Kuto" Version="1.0.3" />
     <PackageReference Include="ScrapySharp" Version="3.0.0" />
   </ItemGroup>
