--- a/ScraperTest_2.csproj
+++ b/ScraperTest_2.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="IronWebScraper" Version="2021.11.0" />
     <PackageReference Include="Kuto" Version="1.0.3" />
     <PackageReference Include="ScrapySharp" Version="3.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
 </Project>
